--- a/config.rb.sample
+++ b/config.rb.sample
@@ -3,17 +3,27 @@
 #
 def ret_config
 	config = Hash.new
+	# IRC server to connect to.
 	config['server']		= 'chat.freenode.net'
+	# Port to connect to IRC server on.
 	config['port']			= 6667
-	# To join multiple channels, add entries to the array.
-	# ["#channel_name channel_key",...]
+	# Array of channels for the bot to join. For keyed channels, use
+	# ['#channel_name1 channel_key1','channel_name2 channel_key2',...]
 	config['channels']	= ['#channel_name1 channel_key1', '#channel_name2']
+	# Connect to IRC server using SSL?
 	config['ssl']				= false
+	# IRC nickname of the bot.
 	config['nick']			= 'mybot'
+	# "Real name" of the bot, shown in WHOIS.
 	config['realname']	= "my bot's name"
+	# Username of the bot.
 	config['user']			= 'mybot'
+	# Message to send to the server when disconnecting from the server.
 	config['quitmsg']		=	'My master says I should go away. :('
-	# If the bot has a registered nick, put the password for that nick here.
-	config['nickpass']	= 'password'
+	# IRC nickname of the bot's owner (you).
+	config['owner']			= 'masternick'
+	# If the bot has a registered nick, uncomment the line below and
+	# insert the correct password for that nick here.
+	#config['nickpass']	= 'password'
 	return config
 end
