Reorganized and standardized config files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,4 @@ learning.db
 FEATURES
 RAWRBOT
 TEST-RAWRBOT
-plugins/auth_rt.rb
-plugins/auth_ldap.rb
-plugins/config_google.rb
-plugins/config_signal.rb
-plugins/config_twitter.rb
+plugins/config/*.rb
