--- a/plugins/config/samples/signal_config.rb.sample
+++ b/plugins/config/samples/signal_config.rb.sample
@@ -4,8 +4,10 @@
 # send to. See below article to translate a phone number to a email address
 # to send a text message to:
 #		http://en.wikipedia.org/wiki/List_of_SMS_gateways
-def signal_return_config
+def return_signal_config
 	signal_config = Hash.new
+
 	signal_config['user'] = 'phonenumber@SMSgateway.com'
+
 	return signal_config
 end
