--- a/plugins/config/samples/twitter_config.rb.sample
+++ b/plugins/config/samples/twitter_config.rb.sample
@@ -2,14 +2,17 @@
 # This function should return Hash of key value pairs of channels to report
 # tweets to, usernames of Twitter accounts to get tweets from, and the
 # frequency with which to check.
-def twitter_return_config
+def return_twitter_config
 	twitter_config = Hash.new
+
 	# IRC Channels to report tweets to.
 	twitter_config['channels'] = ['#channel1','#channel2']
-	# Twitter usernames to look for tweets from.
+
+	# Twitter usernames to look for tweets from (NOT including the initial @).
 	twitter_config['usernames'] = ['username1','username2']
+
 	# Frequency (in seconds) to check these usernames for new tweets.
-	twitter_config['frequency'] = 60
+	twitter_config['frequency'] = 300
 
 	return twitter_config
 end
