--- a/plugins/config/samples/rt_config.rb.sample
+++ b/plugins/config/samples/rt_config.rb.sample
@@ -2,9 +2,12 @@
 # This function should return a Hash containing two key/value pairs:
 # 	'username' => The RT account name used to query RT.
 # 	'pass'		 => The password for the account used to auth with RT.
-def rt_return_auth
-	rt_auth = Hash.new
-	rt_auth['username'] = 'rt_user'
-	rt_auth['pass'] = 'rt_password'
-	return rt_auth
+def return_rt_config
+	rt_config = Hash.new
+
+	rt_config['username'] = 'rt_user'
+
+	rt_config['pass'] = 'rt_password'
+
+	return rt_config
 end
