--- a/plugins/config/samples/twitter_config.rb.sample
+++ b/plugins/config/samples/twitter_config.rb.sample
@@ -5,14 +5,15 @@
 def return_twitter_config
 	twitter_config = Hash.new
 
-	# IRC Channels to report tweets to.
-	twitter_config['channels'] = ['#channel1','#channel2']
+	twitter_config[:feeds] = Hash.new {|hash,key| hash[key] = []}
+	# Hash that contains Twitter usernames to monitor and channels to report
+	# tweets to. Should be structured like so:
+	#twitter_config[:feeds]['twitter_user']		= ['#channel1','#channel2']]
+	twitter_config[:feeds]['user']						= ['#channel1','#channel2']
+	twitter_config[:feeds]['user2']						= ['#channel3']
 
-	# Twitter usernames to look for tweets from (NOT including the initial @).
-	twitter_config['usernames'] = ['username1','username2']
-
-	# Frequency (in seconds) to check these usernames for new tweets.
-	twitter_config['frequency'] = 300
+	# Frequency (in seconds) to check for new tweets.
+	twitter_config[:frequency] = 300
 
 	return twitter_config
 end
