--- a/config.rb.sample
+++ b/config.rb.sample
@@ -5,42 +5,42 @@ def ret_config
 	config = Hash.new
 
 	# IRC server to connect to.
-	config['server']    = 'chat.freenode.net'
+	config[:server]    = 'chat.freenode.net'
 
 	# Port to connect to IRC server on.
-	config['port']      = 6667
+	config[:port]      = 6667
 
 	# Array of channels for the bot to join. For keyed channels, use
 	# ['#channel_name1 channel_key1','channel_name2 channel_key2',...]
-	config['channels']  = ['#channel_name1 channel_key1', '#channel_name2']
+	config[:channels]  = ['#channel_name1 channel_key1', '#channel_name2']
 
 	# Connect to IRC server using SSL?
-	config['ssl']       = false
+	config[:ssl]       = false
 
 	# IRC nickname of the bot.
-	config['nick']      = 'mybot'
+	config[:nick]      = 'mybot'
 
 	# "Real name" of the bot, shown in WHOIS.
-	config['realname']  = "my bot's name"
+	config[:realname]  = "my bot's name"
 
 	# Username of the bot.
-	config['user']      = 'mybot'
+	config[:user]      = 'mybot'
 	
 	# Message to send to the server when disconnecting from the server.
-	config['quitmsg']   = 'My master says I should go away. :('
-
-	# IRC nickname of the bot's owner (you).
-	config['owner']     = 'masternick'
+	config[:quitmsg]   = 'My master says I should go away. :('
 
 	# Prefix to use for picking a command
-	config['prefix']			= /^@/
+	config[:prefix]    = /^@/
+
+	# IRC nickname of the bot's admin(s), i.e. you.
+	config[:admins]    = 'masternick'
 
 	# If the bot has a registered nick, insert the correct password for
 	# that nick on the line below and then uncomment it.
-	#config['nickpass']	='password'
+	#config[:nickpass]  = 'password'
 	
 	# List of plugins to load when the bot is started.
-	config['plugins']   = [LDAPsearch,Social,Messenger,Karma,Learning,RTSearch,SendSignal,GoogleRSS,Twitter]
+	config[:plugins]   = [LDAPsearch,Social,Messenger,Karma,Learning,RTSearch,SendSignal,GoogleRSS,Twitter]
 
 	return config
 end
