Update gem dependencies
Update the gem dependencies to latest versions where possible. This
leads to more of a ripple than I'd like for rubocop cops. For now, I'm
just ignoring most of the new cop failures, which I'll deal with later.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,6 +38,8 @@ environment:
   matrix:
     - RUBY_VERSION: 22
     - RUBY_VERSION: 22-x64
+    - RUBY_VERSION: 243
+    - RUBY_VERSION: 243-x64
 
 # scripts that run after cloning repository
 install:
