Ignore more cops

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -91,3 +91,11 @@ Style/IfInsideElse:
     - 'plugins/Learning.rb'
     - 'plugins/RTSearch.rb'
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Performance/UnfreezeString:
+  Enabled: false
+
+Performance/RegexpMatch:
+  Enabled: false
