Fix AppVeyor config
Add a cacerts file and set the environment variable to point at it, so
old ruby installations can verify certs.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,7 +44,9 @@ environment:
 # scripts that run after cloning repository
 install:
   - set PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
+  - set SSL_CERT_FILE=%APPVEYOR_BUILD_FOLDER%\resources\cacert.pem
   - bundle install
+
 #---------------------------------#
 #       build configuration       #
 #---------------------------------#
