--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ inherit_from: .rubocop_todo.yml
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
-Layout/EndOfLine:
+Style/EndOfLine:
   Enabled: false
 
 # Offense count: 21
