Fix linting errors
Add ignores for bunch of cops in files I didn't change. Fix the cops in
the files that I did change, except for the line length one because
there isn't anything I can do there.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -53,3 +53,17 @@ Style/GlobalVars:
     - 'plugins/Pods.rb'
     - 'plugins/Reload.rb'
     - 'rawrbot.rb'
+
+# TODO: rename plugin files
+Naming/FileName:
+  Enabled: false
+
+# TODO: fix
+Layout/EmptyLineAfterGuardClause:
+  Exclude:
+    - 'lib/http_title.rb'
+    - 'lib/key_value_db.rb'
+    - 'lib/ldap_helper.rb'
+    - 'plugins/Karma.rb'
+    - 'plugins/Learning.rb'
+    - 'plugins/Social.rb'
